--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
+    "lottie-react": "^2.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-lottie": "^1.2.10",
+    "react-router-dom": "^7.4.0",
     "react-scripts": "5.0.1",
+    "tabletop": "^1.6.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
